[fix] Tune spacings on the Bookmark page

--- a/aim/web/ui/src/pages/Bookmarks/Bookmarks.scss
+++ b/aim/web/ui/src/pages/Bookmarks/Bookmarks.scss
@@ -1,7 +1,7 @@
 @use 'src/styles/abstracts' as *;
 
 .Bookmarks {
-  height: 100vh;
+  height: 100%;
   &__appBar {
     position: fixed;
     width: 100%;
